# smartcamera

./: README.md
HLS/: README.md
HLS/Haar_sim/: image.cpp  image.h  image0_320_240.h  main.cpp
HLS/Haar_src/: haar.cpp  haar.h  haar_mapping.h
Linux/: README.md
Linux/BOOT/: bitstream  smartcam-system.dtb  u-boot.img  uEnv.txt  uImage
Yocto/: README.md  build_linux.sh  fill_yocto_image.sh  local.conf
Yocto/hw-description/: system_wrapper.hdf
Yocto/meta-smartcam/conf/: layer.conf
Yocto/meta-smartcam/conf/machine/: zybo-smartcam.conf
Yocto/meta-smartcam/recipes-bsp/device-tree/: device-tree.bb
Yocto/meta-smartcam/recipes-bsp/reference-design/: zybo-smartcam-linux.bb
Yocto/meta-smartcam/recipes-facerec/face-rec-mthread/: face-rec.bb
Yocto/meta-smartcam/recipes-facerec/face-rec-mthread/files/: CMakeLists.txt
Yocto/meta-smartcam/recipes-kernel/linux/: linux-xlnx_2018.3.bbappend
programs/: README.md
programs/face_detection/HW_Facedetection/: CMakeLists.txt  face_HW.cpp
programs/face_detection/Pcam_HW_detection/: CMakeLists.txt  Pcam_HW_detection.cpp  cam_script
programs/face_detection/Pcam_HW_detection_2/: CMakeLists.txt  Pcam_HW_detection_2.cpp  cam_script
programs/face_detection/Pcam_SW_detection(ref)/: CMakeLists.txt  haar.cpp
programs/face_detection/Pcam_SW_detection(ref)/inc/: haar.cpp  haar.h  sqrt.h
programs/face_detection/Pcam_hdet_mdet/: CMakeLists.txt  Pcam_Hdet_Mdet.cpp  cam_script
programs/face_detection/Pcam_hdet_mdet/driv/: xdetec_movement.c  xdetec_movement.h  xdetec_movement_hw.h  xdetec_movement_linux.c  xdetectfaces_hw.h  xdetectfaces_linux.c
programs/face_recognition/Pcam_face/: CMakeLists.txt  Pcam_face_rec.cpp  cam_script
programs/face_recognition/face_rec_test/: CMakeLists.txt  face_rec.cpp
programs/face_recognition/face_rec_test/driv/: xdetectfaces.h
programs/face_recognition/multithread/: Mthr_face_rec.cpp
programs/face_recognition/multithread_2/: CMakeLists.txt  Mthr_face_rec.cpp  cam_script
programs/face_recognition/multithread_2/driv/: xdetectfaces.c
vivado/: README.md  create_project.bat  create_project.sh  project_smartcamera.tcl
vivado/HLS_facedetect/ip/: auxiliary.xml  component.xml  detectFaces_info.xml  pack.bat  run_ippack.tcl  tmp.xpr  vivado.jou
vivado/HLS_facedetect/ip/doc/: ReleaseNotes.txt
vivado/HLS_facedetect/ip/example/: ipi_example.bat  ipi_example.tcl
vivado/HLS_facedetect/ip/subcore/: detectFaces_ap_dadd_3_full_dsp_64_ip.tcl  detectFaces_ap_dcmp_0_no_dsp_64_ip.tcl  detectFaces_ap_dmul_4_max_dsp_64_ip.tcl  detectFaces_ap_fcmp_0_no_dsp_32_ip.tcl  detectFaces_ap_fdiv_14_no_dsp_32_ip.tcl  detectFaces_ap_fmul_2_max_dsp_32_ip.tcl  detectFaces_ap_fpext_0_no_dsp_32_ip.tcl  detectFaces_ap_sitodp_4_no_dsp_32_ip.tcl  detectFaces_ap_sitofp_4_no_dsp_32_ip.tcl
vivado/HLS_facedetect/ip/xgui/: detectFaces_v1_0.tcl
vivado/HLS_movedetect/ip/: auxiliary.xml  component.xml  detec_movement_info.xml  pack.bat  run_ippack.tcl  vivado.jou
vivado/HLS_movedetect/ip/doc/: ReleaseNotes.txt
vivado/HLS_movedetect/ip/example/: ipi_example.bat  ipi_example.tcl
vivado/HLS_movedetect/ip/xgui/: detec_movement_v1_0.tcl
(+825 files in other folders)
